Page MenuHome GnuPG

NtbTLS fails to compile
Closed, ResolvedPublic

Description

I'm working on one of my older test machines. It is Fedora 1, i686 with GCC 3.3. I keep it around for testing with the ancient compiler and toolchain. The toolchain only provides SSSE3 support.

NtbTLS is failing to compile.

It would be nice to have a working GnuPG on this machine so I could sign commits from it. otherwise I have to scp files around the network.

/bin/sh ../libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I. -I..   -I/usr/local/include -DNDEBUG -I/usr/local/include -I/usr/local/include -g2 -O2 -m32 -fPIC -Wall -Wpointer-arith -MT protocol.lo -MD -MP -MF .deps/protocol.Tpo -c -o protocol.lo protocol.c
/bin/sh ../libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I. -I..   -I/usr/local/include -DNDEBUG -I/usr/local/include -I/usr/local/include -g2 -O2 -m32 -fPIC -Wall -Wpointer-arith -MT protocol-cli.lo -MD -MP -MF .deps/protocol-cli.Tpo -c -o protocol-cli.lo protocol-cli.c
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I.. -I/usr/local/include -DNDEBUG -I/usr/local/include -I/usr/local/include -g2 -O2 -m32 -fPIC -Wall -Wpointer-arith -MT util.lo -MD -MP -MF .deps/util.Tpo -c util.c  -fPIC -DPIC -o .libs/util.o
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I.. -I/usr/local/include -DNDEBUG -I/usr/local/include -I/usr/local/include -g2 -O2 -m32 -fPIC -Wall -Wpointer-arith -MT protocol.lo -MD -MP -MF .deps/protocol.Tpo -c protocol.c  -fPIC -DPIC -o .libs/protocol.o
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I.. -I/usr/local/include -DNDEBUG -I/usr/local/include -I/usr/local/include -g2 -O2 -m32 -fPIC -Wall -Wpointer-arith -MT visibility.lo -MD -MP -MF .deps/visibility.Tpo -c visibility.c  -fPIC -DPIC -o .libs/visibility.o
In file included from ntbtls-int.h:251,
                 from util.c:26:
context.h:100: error: redefinition of `x509_cert_t'
util.h:62: error: `x509_cert_t' previously declared here
gmake[2]: *** [util.lo] Error 1
gmake[2]: *** Waiting for unfinished jobs....
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I.. -I/usr/local/include -DNDEBUG -I/usr/local/include -I/usr/local/include -g2 -O2 -m32 -fPIC -Wall -Wpointer-arith -MT protocol-cli.lo -MD -MP -MF .deps/protocol-cli.Tpo -c protocol-cli.c  -fPIC -DPIC -o .libs/protocol-cli.o
In file included from ntbtls-int.h:251,
                 from protocol-cli.c:30:
context.h:100: error: redefinition of `x509_cert_t'
util.h:62: error: `x509_cert_t' previously declared here
In file included from protocol-cli.c:31:
ciphersuites.h:196: error: redefinition of `ciphersuite_t'
context.h:162: error: `ciphersuite_t' previously declared here
protocol-cli.c: In function `write_certificate_verify':
protocol-cli.c:1864: warning: unused variable `hash_start'
gmake[2]: *** [protocol-cli.lo] Error 1
In file included from ntbtls-int.h:251,
                 from protocol.c:30:
context.h:100: error: redefinition of `x509_cert_t'
util.h:62: error: `x509_cert_t' previously declared here
In file included from protocol.c:31:
ciphersuites.h:196: error: redefinition of `ciphersuite_t'
context.h:162: error: `ciphersuite_t' previously declared here
gmake[2]: *** [protocol.lo] Error 1
gmake[1]: *** [all-recursive] Error 1
gmake[1]: Leaving directory `/home/build/ntbtls-0.1.2'
gmake: *** [all] Error 2
Failed to build ntbtls
Failed to build ntbTLS
[jwalton@localhost Build-Scripts]$ In file included from ntbtls-int.h:251,
                 from visibility.h:24,
                 from visibility.c:24:
context.h:100: error: redefinition of `x509_cert_t'
util.h:62: error: `x509_cert_t' previously declared here

Details

Version
0.1.2

Revisions and Commits

Event Timeline

JW created this object in space S1 Public.
JW added a project: Bug Report.
gniibe claimed this task.
gniibe triaged this task as Normal priority.
gniibe added a subscriber: gniibe.

It is fixed in master branch of the repo.