Remove duplicated typedefs.

* src/ciphersuites.h (ciphersuite_t): Remove.
* src/context.h (x509_cert_t): Remove.

--

GnuPG-bug-id: 4305
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>